--- a/打卡签到GetCookie.conf
+++ b/打卡签到GetCookie.conf
@@ -1,5 +1,4 @@
-hostname =*.*.mob.com,mk.immomo.com,yuba.douyu.com,h5.youzan.com,zm.shujumagician.com,m.xiaomiyoupin.com,api.cashtoutiao.com,
-qqpet.jwetech.com,studygolang.com,api.kkmh.com,www.baimaa.com,ph0001.hezyq.com,w3.ilovecoupon.top,pd.xuexgchn.xyz,xx.cqxygzs.cn,ios-fenqu11.lxsjgo.com,wq.02gk.com,api.m.jd.com, wq.jd.com,cloud.umetrip.com,m.ctrp.com,*.ctrp.com,m.elong.com,activity.m.duiba.com.cn,icbc1.wlphp.com:8444,wx.17u.cn
+hostname =*.*.mob.com,mk.immomo.com,yuba.douyu.com,h5.youzan.com,zm.shujumagician.com,m.xiaomiyoupin.com,api.cashtoutiao.com,qqpet.jwetech.com,studygolang.com,api.kkmh.com,www.baimaa.com,ph0001.hezyq.com,w3.ilovecoupon.top,pd.xuexgchn.xyz,xx.cqxygzs.cn,ios-fenqu11.lxsjgo.com,wq.02gk.com,api.m.jd.com, wq.jd.com,cloud.umetrip.com,m.ctrp.com,*.ctrp.com,m.elong.com,activity.m.duiba.com.cn,icbc1.wlphp.com:8444,wx.17u.cn
 
 
 
