--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,6 +1,10 @@
-hostname =mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, jdjoy.jd.com, draw.jdfcloud.com, api.m.jd.com, vsco.co, api_2496.kuwo.cn, *.amemv.com, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname =api.gotokeep.com,59.110.149.231,129.211.156.213,mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, jdjoy.jd.com, draw.jdfcloud.com, api.m.jd.com, vsco.co, api_2496.kuwo.cn, *.amemv.com, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
+
+#keep解锁vip（仅针对Keep版本号6.24-6.27的版本）
+https://api.gotokeep.com/(.+/subject|.+/dynamic|.+/coursePlus/.+|.+/status|.+/tab|.+/my|.+/start|.+/join|.+/complete|.+/detail/.+|.+/preview|.+/auth|.+/tab|.+/days) url script-response-body https://raw.githubusercontent.com/photonmang/quantumultX/master/keep.js
+
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
