--- a/自用GetCookie.conf
+++ b/自用GetCookie.conf
@@ -1,11 +1,4 @@
-hostname = sf-integral-sign-in.weixinjia.net, mcs-mimp-web.sf-express.com,api.xiaoheihe.cn,api.m.jd.com,manga.bilibili.com,*.bilibili.com,xiaoshuo.qm989.com,*.video.qq.com,*.acfun.cn,110.43.90.61,tieba.baidu.com,h5.ele.me,*.iqiyi.com,wapside.189.cn,wx.10086.cn,apk.tw,clientaccess.10086.cn,group.baicizhan.com,*.csdn.net,sapi.beingfine.cn,frodo.douban.com,api.dongqiudi.com,www.duokan.com,api.everphoto.cn,api.dushu.io,pm.m.fenqile.com,www.flyertea.com,m.gdoil.cn,activity-1.m.duiba.com.cn,gameapi.hellobike.com,wxprdapplet.gac-nio.com,my.ruanmei.com,daojia.jd.com,www.maomicd.com,maicai.api.ddxq.mobi,i.meituan.com,credits.bz.mgtv.com,apiwz.midukanshu.com,api-takumi.mihoyo.com,music.163.com,*.m.163.com,api.infzm.com,app.nio.com,wx-mini.pagoda.com.cn,node.kg.qq.com,api.1sapp.com,user.qunar.com,*.rr.tv,sf-integral-sign-in.weixinjia.net,mcs-mimp-web.sf-express.com,*.smzdm.com,passport.suning.com,luckman.suning.com,sign.suning.com,gameapi.suning.com,tncj.hortorgames.com,*.v2ex.com,user-api-prd-mx.wandafilm.com,promotion.waimai.meituan.com,zt.wps.cn,mobwsa.ximalaya.com,iphone.myzaker.com,*.rrys2019.com,ios.zmzapi.com,mwegame.qq.com,m.ctrip.com,proapi.115.com,h5.bianlifeng.com,as.xiaojukeji.com,superapp.kiwa-tech.com,webapi.qmai.cn,teacherapi.zmlearn.com,mall.oclean.com,*.xmcimg.com,api.weibo.cn,api.inews.qq.com,nebula.kuaishou.com,newsapi.sina.cn,e.189.cn,pay.sc.weibo.com,*.youth.cn,ios.baertt.com,www.mydigit.cn,proxy.vac.qq.com,app*.jegotrip.com.cn,task.jegotrip.com.cn,api.umer.com.cn,exp.angelalign.com,ngabbs.com,xeq1kjnhr.m.jd.com,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,huiyuan.163.com,cxdng.cpic.com.cn,draw.jdfcloud.com,*.*.mob.com,mk.immomo.com,mobile01.91quzou.com,yuba.douyu.com,h5.youzan.com,zm.shujumagician.com,m.xiaomiyoupin.com,api.cashtoutiao.com,appv8.qukantianxia.com,appv7.qukantx.com,qqpet.jwetech.com,sports.lifesense.com,studygolang.com,api.kkmh.com,www.baimaa.com,jdjoy.jd.com,www.cuuc.club,ph0001.hezyq.com,w3.ilovecoupon.top,pd.xuexgchn.xyz,xx.cqxygzs.cn,ios-fenqu11.lxsjgo.com,wq.02gk.com,wq.jd.com,cloud.umetrip.com,m.ctrp.com,*.ctrp.com,m.elong.com,activity.m.duiba.com.cn,icbc1.wlphp.com:8444,wx.17u.cn,i.snssdk.com,is.snssdk.com,note.youdao.com,dominos0724.shjimang.com,geekhub.com,passport.biligame.com,www.2xtj7.cn,www.hnmiaosu.cc,dk.ne72.com,lkyl.dianpusoft.cn
-
-#顺丰速运签到
-^https:\/\/sf-integral-sign-in.weixinjia.net\/app\/index url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
-^https:\/\/mcs-mimp-web.sf-express.com\/mcs-mimp\/share\/(.*?)Redirect url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
-
-#QX 远程订阅微信签到打卡小程序App签到
-https:\/\/(www\.baimaa\.com|www\.2xtj7\.cn|www\.hnmiaosu\.cc|ph0001\.hezyq\.com|wq\.02gk\.com|dk\.ne72\.com)\/app\/index\.php? url script-request-header https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/wxdaka.js
+hostname =api.xiaoheihe.cn,api.m.jd.com,manga.bilibili.com,*.bilibili.com,xiaoshuo.qm989.com,*.video.qq.com,*.acfun.cn,110.43.90.61,tieba.baidu.com,h5.ele.me,*.iqiyi.com,wapside.189.cn,wx.10086.cn,apk.tw,clientaccess.10086.cn,group.baicizhan.com,*.csdn.net,sapi.beingfine.cn,frodo.douban.com,api.dongqiudi.com,www.duokan.com,api.everphoto.cn,api.dushu.io,pm.m.fenqile.com,www.flyertea.com,m.gdoil.cn,activity-1.m.duiba.com.cn,gameapi.hellobike.com,wxprdapplet.gac-nio.com,my.ruanmei.com,daojia.jd.com,www.maomicd.com,maicai.api.ddxq.mobi,i.meituan.com,credits.bz.mgtv.com,apiwz.midukanshu.com,api-takumi.mihoyo.com,music.163.com,*.m.163.com,api.infzm.com,app.nio.com,wx-mini.pagoda.com.cn,node.kg.qq.com,api.1sapp.com,user.qunar.com,*.rr.tv,sf-integral-sign-in.weixinjia.net,mcs-mimp-web.sf-express.com,*.smzdm.com,passport.suning.com,luckman.suning.com,sign.suning.com,gameapi.suning.com,tncj.hortorgames.com,*.v2ex.com,user-api-prd-mx.wandafilm.com,promotion.waimai.meituan.com,zt.wps.cn,mobwsa.ximalaya.com,iphone.myzaker.com,*.rrys2019.com,ios.zmzapi.com,mwegame.qq.com,m.ctrip.com,proapi.115.com,h5.bianlifeng.com,as.xiaojukeji.com,superapp.kiwa-tech.com,webapi.qmai.cn,teacherapi.zmlearn.com,mall.oclean.com,*.xmcimg.com,api.weibo.cn,api.inews.qq.com,nebula.kuaishou.com,newsapi.sina.cn,e.189.cn,pay.sc.weibo.com,*.youth.cn,ios.baertt.com,www.mydigit.cn,proxy.vac.qq.com,app*.jegotrip.com.cn,task.jegotrip.com.cn,api.umer.com.cn,exp.angelalign.com,ngabbs.com,xeq1kjnhr.m.jd.com,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,huiyuan.163.com,cxdng.cpic.com.cn,draw.jdfcloud.com,*.*.mob.com,mk.immomo.com,mobile01.91quzou.com,yuba.douyu.com,h5.youzan.com,zm.shujumagician.com,m.xiaomiyoupin.com,api.cashtoutiao.com,appv8.qukantianxia.com,appv7.qukantx.com,qqpet.jwetech.com,sports.lifesense.com,studygolang.com,api.kkmh.com,www.baimaa.com,jdjoy.jd.com,www.cuuc.club,ph0001.hezyq.com,w3.ilovecoupon.top,pd.xuexgchn.xyz,xx.cqxygzs.cn,ios-fenqu11.lxsjgo.com,wq.02gk.com,wq.jd.com,cloud.umetrip.com,m.ctrp.com,*.ctrp.com,m.elong.com,activity.m.duiba.com.cn,icbc1.wlphp.com:8444,wx.17u.cn,i.snssdk.com,is.snssdk.com,note.youdao.com,dominos0724.shjimang.com,geekhub.com,passport.biligame.com,www.2xtj7.cn,www.hnmiaosu.cc,dk.ne72.com,lkyl.dianpusoft.cn
 
 #Geekhub
 ^https:\/\/geekhub\.com\/checkins\/start url script-request-header https://raw.githubusercontent.com/id77/QuantumultX/master/task/geekhub.cookie.js
@@ -23,39 +16,6 @@ http:\/\/api\.gaoqingdianshi\.com\/api\/v2\/cash\/withdrawal url script-request-
 #今日头条极速版
 ^https:\/\/is\.snssdk\.com\/score_task\/v1\/task\/(sign_in|get_read_bonus) url script-request-body https://raw.githubusercontent.com/iepngs/Script/master/jrtt/index.js
 ^https:\/\/i\.snssdk\.com\/ttgame\/game_farm\/home_info url script-request-body https://raw.githubusercontent.com/iepngs/Script/master/jrtt/index.js
-
-#早起打卡赚钱花小程序自动打卡返利
-https:\/\/xx\.cqxygzs\.cn\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/daka5.js
-
-#坚持打卡赚钱小程序自动打卡返利，搜索对应小程序获取cookie
-https:\/\/zm\.shujumagician\.com\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/daka4.js
-
-#打卡赚钱啦小程序自动打卡返利，搜索对应小程序获取cookie
-^https:\/\/pd\.xuexgchn\.xyz\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/daka3.js
-
-#365打卡赚钱小程序自动打卡返利，搜索对应小程序获取cookie
-https:\/\/w3\.ilovecoupon\.top\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/daka2.js
-
-#微打卡小程序自动打卡返利，搜索对应小程序获取cookie
-https:\/\/zm\.shujumagician\.com\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/wdk.js
-
-#每日早起打卡赚钱小程序自动打卡返利，搜索对应小程序获取cookie
-https:\/\/ph0001\.hezyq\.com\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/daka1.js
-
-#早打卡赚钱小程序自动打卡返利
-https:\/\/zm\.shujumagician\.com\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/zdk.js
-
-#爱尚每日打卡小程序自动打卡返利，打开对应小程序获取cookie后即可自动打卡
-https:\/\/ph0001\.hezyq\.com\/* url script-request-header https://raw.githubusercontent.com/ziye12/JavaScript/master/asdkziye.js
-
-#音乐line打卡返利
-https:\/\/www\.baimaa\.com\/* url script-request-header https://raw.githubusercontent.com/sngxpro/scripts/master/yydkziye.js
-
-#陀螺打卡
-https:\/\/wq\.02gk\.com\/* url script-request-header https://raw.githubusercontent.com/ziye12/JavaScript/master/tldkziye.js
-
-#梨涡
-https:\/\/api\.m\.jd\.com\/api\/v1\/sign\/doSign url script-request-body https://raw.githubusercontent.com/iisams/Scripts/master/liwo/7dayscookie.js
 
 #京喜
 https:\/\/wq\.jd\.com\/pgcenter\/sign\/QueryPGDetail\?sceneval=2&pageSize=20 url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js
@@ -91,8 +51,6 @@ https://socketio\.ctrip\.com/api url reject
 #同程小程序
 ^https:\/\/wx\.17u\.cn\/wcsign\/sign\/GetSignInfo url script-request-body https://raw.githubusercontent.com/barrym-chen/Script/master/tongc/tongc_cookie.js
 
-#趣走尊享版App签到（功能:跑步，签到，打卡，步数兑换,偷步等）
-https:\/\/mobile01\.91quzou\.com\/rebate\/qz\/task\/homeTaskView\.do url script-request-header https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/quwalk2.2.js
 
 #cu云加速每日签到
 ^https:\/\/www\.cuuc\.club\/user\/checkin url script-request-header https://raw.githubusercontent.com/dompling/Script/master/cuuc/cuuc.cookie.js
