--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,6 +1,10 @@
-hostname =api.gotokeep.com,59.110.149.231,129.211.156.213,mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, jdjoy.jd.com, draw.jdfcloud.com, api.m.jd.com, vsco.co, api_2496.kuwo.cn, *.amemv.com, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname =api.weibo.cn,api.gotokeep.com,59.110.149.231,129.211.156.213,mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, jdjoy.jd.com, draw.jdfcloud.com, api.m.jd.com, vsco.co, api_2496.kuwo.cn, *.amemv.com, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
+
+#微博去广告（启动圈x自动生效）
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
+
 
 #keep解锁vip（仅针对Keep版本号6.24-6.27的版本）
 https://api.gotokeep.com/(.+/subject|.+/dynamic|.+/coursePlus/.+|.+/status|.+/tab|.+/my|.+/start|.+/join|.+/complete|.+/detail/.+|.+/preview|.+/auth|.+/tab|.+/days) url script-response-body https://raw.githubusercontent.com/photonmang/quantumultX/master/keep.js
