--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,6 +1,9 @@
-hostname =testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname =awmattack.*.com, testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
+#咪哩视频破解
+#下载地址:http://69n1.cn
+^https:\/\/awmattack\.(.+)\.com\/(api/member/info|api/video/video/video_play) url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/s7aa.cn/mlsp.json
 
 #国区TF可以下载已下架app
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
