--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,6 +1,15 @@
-hostname =awmattack.*.com, testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname =cn1.invit.vip,www.babybooks.top,awmattack.*.com, testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
+
+
+#电子请柬制作 - 婚礼邀请函制作必备APP 破解vip
+^https:\/\/cn1\.invit\.vip\/users\/info url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/qing/qing.js
+
+#儿童睡前故事破解vip
+#下载地址：appstore下载，https:\/\/apps.apple.com\/cn\/app\/%E5%84%BF%E7%AB%A5%E7%9D%A1%E5%89%8D%E6%95%85%E4%BA%8B-%E7%AB%A5%E5%B9%B4%E5%BF%85%E5%90%AC%E7%9A%84%E5%A5%BD%E6%95%85%E4%BA%8B\/id1458435477
+^https:\/\/www\.babybooks\.top\/v0\/profile url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/babybooks/babybooks2.js
+
 #咪哩视频破解
 #下载地址:http://69n1.cn
 ^https:\/\/awmattack\.(.+)\.com\/(api/member/info|api/video/video/video_play) url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/s7aa.cn/mlsp.json
