--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,7 +1,10 @@
-hostname =cn1.invit.vip,www.babybooks.top,awmattack.*.com, testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname =lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
 
+#酷咪视频VIP无限看
+#下载地址：km.app
+^https:\/\/lginstaacademy\.com(\/\/api\/movie\/addPlay|\/\/api\/member|\/api\/video_clip\/play|\/api\/app\/message_list|\/api\/home\/index_recommend|\/\/api\/movie\/play\/) url script-response-body https://raw.githubusercontent.com/Crazybbok/SelfScripts/master/kumiunlock.js
 
 #电子请柬制作 - 婚礼邀请函制作必备APP 破解vip
 ^https:\/\/cn1\.invit\.vip\/users\/info url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/qing/qing.js
