--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -4,7 +4,8 @@ hostname =lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, te
 
 #酷咪视频VIP无限看
 #下载地址：km.app
-^https:\/\/lginstaacademy\.com(\/\/api\/movie\/addPlay|\/\/api\/member|\/api\/video_clip\/play|\/api\/app\/message_list|\/api\/home\/index_recommend|\/\/api\/movie\/play\/) url script-response-body https://raw.githubusercontent.com/Crazybbok/SelfScripts/master/kumiunlock.js
+
+^https:\/\/(.+)\.com(\/\/api\/movie\/addPlay|\/\/api\/member|\/api\/video_clip\/play|\/api\/app\/message_list|\/api\/home\/index_recommend|\/\/api\/movie\/play\/) url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/s7aa.cn/kumi.js
 
 #电子请柬制作 - 婚礼邀请函制作必备APP 破解vip
 ^https:\/\/cn1\.invit\.vip\/users\/info url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/qing/qing.js
