--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,4 +1,4 @@
-hostname =lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname =*.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, testflight.apple.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
 
