--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,4 +1,4 @@
-hostname = lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, jdjoy.jd.com, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname = lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
 
@@ -25,9 +25,6 @@ hostname = lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, i
 
 #keep解锁vip（仅针对Keep版本号6.24-6.27的版本）
 https://api.gotokeep.com/(.+/subject|.+/dynamic|.+/coursePlus/.+|.+/status|.+/tab|.+/my|.+/start|.+/join|.+/complete|.+/detail/.+|.+/preview|.+/auth|.+/tab|.+/days) url script-response-body https://raw.githubusercontent.com/photonmang/quantumultX/master/keep.js
-
-#宠汪汪聚宝盆辅助脚本
-^https://jdjoy\.jd\.com/pet/getPetTreasureBox url script-response-body https://raw.githubusercontent.com/Zero-S1/JD_tools/master/jbp.js
 
 #vsco解锁vip
 ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
