--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,6 +1,73 @@
-hostname = lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname = 69shipin.vip,ws.60he.com,www.zhihu.com,jk.5apk.cn,api.zhihu.com,zhuanlan.zhihu.com,ftvn.hawsing.com.tw:3000,*.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
+
+#辣椒视频解锁会员(少年歌行pro製作，轉載請保留出處信息)
+#下载地址：http://sdfvs.cxfbhy.live/?code=67JALF
+^http:\/\/jk\.5apk\.cn\/api(\/reg|\/play) url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/lajiao/sngxljsp.js
+
+#69视频解锁会员(少年歌行pro製作，轉載請保留出處信息)
+#69視頻下載地址：http://app.exxanz.com/?code=SQDDAH
+^http:\/\/69shipin\.vip\/api\/user\/personal url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/69sp/69sp.js
+^http:\/\/69shipin\.vip\/api\/community\/edit url response-body "code":\d+ response-body "code":200
+
+#pythonai破解vip(少年歌行pro@黑科技製作)
+^http:\/\/ws\.60he\.com\/(book|user).+ url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/pythonai/pythonai.js
+
+#FainTV解锁会员去广告（ios黑科技制作）
+^http:\/\/ftvn\.hawsing\.com\.tw:3000\/client\/login url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/s7aa.cn/fatv.js
+
+
+#zhihu优化（bm7）
+# 知乎处理用户信息
+^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
+# 知乎信息流去广告
+^https?:\/\/api\.zhihu\.com\/(moments|topstory)(\/|\?)?(recommend|action=|feed_type=)(?!\/people) url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
+# 知乎回答列表去广告
+^https?:\/\/api\.zhihu\.com\/v4\/questions url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
+# 知乎预置关键词去广告
+^https?:\/\/api\.zhihu\.com\/search\/preset_words\? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
+# 知乎去除回答下的广告
+^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/\d+\/recommendations url reject-dict
+# 知乎其他广告拦截
+^https?:\/\/api\.zhihu\.com\/(notifications\/v3\/count|v3\/package|me\/guides|drama\/living-info|ad|fringe|commercial|market\/popovers|search\/(top|tab)|.*featured-comment-ad) url reject-200
+# 知乎网页版去广告
+^https?:\/\/www\.zhihu\.com\/api\/v4/(questions|anwsers)\/\d+/related-readings url reject-200
+^https?:\/\/www\.zhihu\.com\/api\/v4\/hot_recommendation url reject-200
+^https?:\/\/www\.zhihu\.com\/commercial_api\/banners_v3\/mobile_banner url reject-200
+^https?:\/\/zhuanlan\.zhihu\.com\/api\/articles\/\d+\/recommendation url reject-200
+# 知乎品牌提问广告
+^https?:\/\/api\.zhihu\.com\/brand\/question\/\d+/card\? url reject-dict
+^https?:\/\/www\.zhihu\.com\/api\/v\d+\/brand\/question/\d+/card\? url reject-dict
+
+
+
+#bilibili优化（bm7）
+# 去除动态中的话题
+^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v1\/topic_svr url reject-dict
+# 去除动态中的最常访问
+^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/mix_uplist url reject-dict
+# 可能的一些推广(beta)
+^https?:\/\/api\.bilibili\.com\/pgc\/season\/app\/related\/recommend\? url reject-dict
+# 推荐去广告
+^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index\? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 追番去广告
+^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 直播去广告
+^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 动态去广告
+^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_new\? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 开屏去广告
+^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 标签页处理
+^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 我的页面处理
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js
+# 漫画去广告
+^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/Flash url reject-dict
+^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/ListFlash url reject-dict
+
+
 
 #酷咪视频VIP无限看
 #下载地址：km.app
