--- a/自用unclockVIP.conf
+++ b/自用unclockVIP.conf
@@ -1,6 +1,24 @@
-hostname = 69shipin.vip,ws.60he.com,www.zhihu.com,jk.5apk.cn,api.zhihu.com,zhuanlan.zhihu.com,ftvn.hawsing.com.tw:3000,*.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
+hostname = *.kuwo.cn,api.*.xyz,api.wscdn.vip,pan.baidu.com,api.myb6api.*:8080,69shipin.vip,ws.60he.com,www.zhihu.com,jk.5apk.cn,api.zhihu.com,zhuanlan.zhihu.com,ftvn.hawsing.com.tw:3000,*.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,lginstaacademy.com,cn1.invit.vip,www.babybooks.top,awmattack.*.com, i.at.qq.com, api.gotokeep.com,59.110.149.231,129.211.156.213, vsco.co, api_2496.kuwo.cn, pan.baidu.com, api.bjxkhc.com, vip1.kuwo.cn, api1000.cvxia.com, p.du.163.com, baimiao.uzero.cn, *.xxjjappss.com, mobile01.91quzou.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, nmeditation.snailsleep.net
 
 #修改hostname等待同步
+
+#酷我音乐vip解锁（by nobyda）
+^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
+^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?uid\=\d+ url 302 http://musicpay.kuwo.cn/music.pay?uid=1
+
+
+#桃子视频解锁会员
+#下载地址：https://av2.fit?code=ECLCJELC
+^http:\/\/api.*.xyz\/fast-cloud\/user\/info url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/tzsp/sngxtz.js
+
+
+#波波视频会员解锁+去广告（短视频未解锁，网球全部解锁）
+#下载地址：http://wssp22.com
+^http:\/\/api\.wscdn\.vip\/index.+ url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/s7aa.cn/bbsp.js
+
+#菠萝视频解锁无限看
+#下载地址：https://aff.polomv.com/af/edrJ
+^http:\/\/api\.myb6api\.(.+):8080\/api\.php\/api\/users\/getBaseInfo url script-response-body https://raw.githubusercontent.com/sngxpro/QuantumultX/master/s7aa.cn/sngxblsp.js
 
 #辣椒视频解锁会员(少年歌行pro製作，轉載請保留出處信息)
 #下载地址：http://sdfvs.cxfbhy.live/?code=67JALF
