--- a/SelfClash.yaml
+++ b/SelfClash.yaml
@@ -5,59 +5,59 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies: 
-  - {name: 183.240.9.28:29979, server: 183.240.9.28, port: 29979, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}  
-  - {name: 183.240.9.28:29980, server: 183.240.9.28, port: 29980, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
-  - {name: 183.240.9.28:29982, server: 183.240.9.28, port: 29982, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
-  - {name: 183.240.9.28:29983, server: 183.240.9.28, port: 29983, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
-  - {name: 183.240.9.28:29984, server: 183.240.9.28, port: 29984, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
-  - {name: 183.240.9.28:29987, server: 183.240.9.28, port: 29987, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
-  - {name: 183.240.9.28:29988, server: 183.240.9.28, port: 29988, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
-  - {name: 120.232.251.206:29979, server: 120.232.251.206, port: 29979, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
-  - {name: 120.232.251.206:29980, server: 120.232.251.206, port: 29980, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联1, server: 183.240.9.28, port: 29979, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}  
+  - {name: 易建联2, server: 183.240.9.28, port: 29980, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联3, server: 183.240.9.28, port: 29982, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联4, server: 183.240.9.28, port: 29983, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联5, server: 183.240.9.28, port: 29984, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联6, server: 183.240.9.28, port: 29987, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联7, server: 183.240.9.28, port: 29988, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联8, server: 120.232.251.206, port: 29979, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
+  - {name: 易建联9, server: 120.232.251.206, port: 29980, type: http, username: "442993652168396800", password: "2ef91648-089f-4c81-b34d-06f072ec51dd", tls: true, skip-cert-verify: false}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
   - name: 🎥 NETFLIX
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
   - name: ⛔️ 广告拦截
     type: select
     proxies:
@@ -76,15 +76,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -95,44 +95,44 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -148,15 +148,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 183.240.9.28:29979
-      - 183.240.9.28:29980
-      - 183.240.9.28:29982
-      - 183.240.9.28:29983
-      - 183.240.9.28:29984
-      - 183.240.9.28:29987
-      - 183.240.9.28:29988
-      - 120.232.251.206:29979
-      - 120.232.251.206:29980
+      - 易建联1
+      - 易建联2
+      - 易建联3
+      - 易建联4
+      - 易建联5
+      - 易建联6
+      - 易建联7
+      - 易建联8
+      - 易建联9
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
